# mod_quickjs

./: README.md
examples/: coredb_test.js  curl_async_test.js  curl_bg_test.js  curl_test.js  dbh.js  file_test.js  microbench.js  odbc_test.js  script_args.js  script_int.js  session_frames.js  session_input.js  session_input2.js  session_rec_play.js  soc_tcp_test.js  soc_udp_test.js  use_std_os.js  v15_echo.js  v15_openai_chat.js  v15_session_props.js  v15_whisperd.js  v16_chatgpt.js  v16_dialout.js  v16_echo.js  v16_timers.js  v16_whisperd.js  v17_speechDetect.js  xml_test.js
examples/dyn_module/: Makefile  fib-test.js  fib.c
modules/pgsql/: pgsql.cbp  pgsql.layout
modules/pgsql/example/: pgsql-test.js  pgsql-test2.js
modules/pgsql/sources/: Makefile  pgsql.c  pgsql.h
sources/: Makefile  Makefile.am  Makefile.in  curl_hlp.c  curl_hlp.h  js_codec.c  js_codec.h  js_coredb.c  js_coredb.h  js_curl.c  js_curl.h  js_curl_misc.c  js_dbh.c  js_dbh.h  js_dtmf.c  js_dtmf.h  js_event.c  js_event.h  js_eventhandler.c  js_eventhandler.h  js_fh.c  js_file.c  js_file.h  js_filehandle.c  js_filehandle.h  js_fileio.c  js_ivs.c  js_ivs.h  js_ivs_async.c  js_ivs_audio.c  js_ivs_event.c  js_ivs_misc.c  js_ivs_playback.c  js_ivs_srvc.c  js_ivs_video.c  js_mod_teletone.c  js_odbc.c  js_odbc.h  js_session.c  js_session.h  (+19 more)
sources/conf/autoload_configs/: quickjs.conf.xml
sources/deprecated/: js_fileio.c  js_fileio.h  js_teletone.c  js_teletone.h
sources/disabled/: js_odbc.c
sources/examples/: curl_test.js  session_test1.js
